--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- QUOTE FORM -->
   <section id="quote">
     <h2>Request a Free Quote</h2>
-    <form action="https://formsubmit.co/your@email.com" method="POST">
+    <form action="https://formsubmit.co/akil.walker@walkerlawnservices.com" method="POST">
       <input type="hidden" name="_subject" value="New Quote Request - Walker Lawn Services" />
       <input type="text" name="Name" placeholder="Your Name" required />
       <input type="text" name="Address" placeholder="Service Address" required />
