--- a/index.html
+++ b/index.html
@@ -1,24 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Primary Meta Tags -->
-<title>Walker Lawn Services | Top Lawn Care in Atlanta, GA</title>
-<meta name="title" content="Walker Lawn Services | Top Lawn Care in Atlanta, GA">
-<meta name="description" content="Affordable and professional residential & commercial lawn care in Atlanta. Call (770) 896-2847 to book mowing, trimming, leaf removal, and more.">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.walkerlawnservices.com/">
-<meta property="og:title" content="Walker Lawn Services | Top Lawn Care in Atlanta, GA">
-<meta property="og:description" content="Affordable and professional residential & commercial lawn care in Atlanta. Call (770) 896-2847 to book mowing, trimming, leaf removal, and more.">
-<meta property="og:image" content="https://www.walkerlawnservices.com/assets/logo.jpg">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://www.walkerlawnservices.com/">
-<meta property="twitter:title" content="Walker Lawn Services | Top Lawn Care in Atlanta, GA">
-<meta property="twitter:description" content="Affordable and professional lawn care. Mowing, trimming, leaf removal, and sod installation in Atlanta.">
-<meta property="twitter:image" content="https://www.walkerlawnservices.com/assets/logo.jpg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Walker Lawn Services – Atlanta’s trusted provider of residential and commercial lawn care. Call today for a quote!" />
@@ -104,7 +86,7 @@
   <!-- QUOTE FORM -->
   <section id="quote">
     <h2>Request a Free Quote</h2>
-    <form action="https://formsubmit.co/akil.walker@walkerlawnservices.com" method="POST">
+    <form action="https://formsubmit.co/your@email.com" method="POST">
       <input type="hidden" name="_subject" value="New Quote Request - Walker Lawn Services" />
       <input type="text" name="Name" placeholder="Your Name" required />
       <input type="text" name="Address" placeholder="Service Address" required />
