--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Walker Lawn Services – Atlanta’s trusted provider of residential and commercial lawn care. Call today for a quote!" />
   <meta name="keywords" content="lawn care Atlanta, grass cutting, Walker Lawn Services, landscaping, mowing, commercial lawn care Atlanta" />
-  <meta name="author" content="Akil Walker" />
+  <meta name="author" content="Akil Walker" /> 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Walker Lawn Services",
+  "image": "https://www.walkerlawnservices.com/assets/logo.jpg",
+  "url": "https://www.walkerlawnservices.com",
+  "email": "akil.walker@walkerlawnservices.com",
+  "telephone": "+17708962847",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Atlanta Metro Area",
+    "addressLocality": "Atlanta",
+    "addressRegion": "GA",
+    "postalCode": "30349",
+    "addressCountry": "US"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "Atlanta Metro"
+  },
+  "openingHours": [
+    "Mo-Fr 08:00-18:00",
+    "Sa 09:00-16:00"
+  ],
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "12"
+  },
+  "sameAs": [
+    "https://www.facebook.com/walkerlawnservices",
+    "https://www.instagram.com/walkerlawnservices"
+  ],
+  "hasMap": "https://www.google.com/maps/place/Atlanta,+GA"
+}
+  </script>
   <title>Walker Lawn Services | Atlanta, GA</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
